hwss-core-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hwss-core
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hwss-core
  template:
    metadata:
      labels:
        app: hwss-core
    spec:
      containers:
        - name: hwss-core
          image: druksmartdeveloper2024/hwss-core:v2.2.5
          ports:
            - containerPort: 8123
          resources:
            # requests:
            #   cpu: "500m"
            #   memory: "512Mi"
            limits:
              memory: "2Gi"
              cpu: "2000m"
      imagePullSecrets:
        - name: imgpull
