hwss-qbs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hwss-qbs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hwss-qbs
  template:
    metadata:
      labels:
        app: hwss-qbs
    spec:
      containers:
        - name: hwss-qbs
          image: druksmartdeveloper2024/hwss-qbs:v2.2.5
          ports:
            - containerPort: 8686
          resources:
            # requests:
            #   cpu: "500m"
            #   memory: "512Mi"
            limits:
              cpu: "2000m"
              memory: "2Gi"
      imagePullSecrets:
        - name: imgpull
