hwss-core-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hwss-core
spec:
  selector:
    app: hwss-core
  ports:
    - protocol: TCP
      port: 8123
      targetPort: 8123
  type: ClusterIP
