hwss-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hwss-frontend
spec:
  selector:
    app: hwss-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
