hwss-qbs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hwss-qbs
spec:
  selector:
    app: hwss-qbs
  ports:
    - protocol: TCP
      port: 8686
      targetPort: 8686
  type: ClusterIP
